--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,14 @@
   "type": "module",
   "dependencies": {
     "@types/express": "^5.0.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/node": "^24.9.1",
     "typescript": "^5.9.3"
   }
